# bio-tech

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Dockerfile  GUIDE.md  LICENSE  Makefile  PLAN.md  PROGRESS.md  README.md  Session prompt.md  docker-compose.yml  pyproject.toml  requirements.txt
api/: main.py  schemas.py
api/routes/: __init__.py  explain.py  explore.py  knowledge.py  predict.py
api/services/: __init__.py  feature_service.py  model_service.py
configs/: default.yaml  sweep.yaml
configs/ablation/: no_attention.yaml  no_cnv.yaml  no_expression.yaml  no_focal_loss.yaml  no_methylation.yaml  no_mutation.yaml  single_expression_only.yaml  single_mutation_only.yaml
paper/: manuscript.tex  references.bib
scripts/: download_data.py  evaluate.py  generate_figures.py  inference.py  pretrain_autoencoders.py  run_ablation.py  run_hpo.py  start_webapp.bat  start_webapp.sh  train.py  verify_reproducibility.py
src/data/: __init__.py  cbioportal_client.py  clinvar_loader.py  data_merger.py  datamodule.py  dataset.py
src/evaluation/: __init__.py  benchmarks.py  biological_validation.py  external_tools.py  metrics.py
src/explainability/: __init__.py  attention_viz.py  integrated_gradients.py  lime_explainer.py  (+1 more)
tests/: test_ablation.py  test_api.py  test_benchmarks.py  test_biological_validation.py  test_data_loading.py  test_data_merger.py  test_encoders.py  test_explainability.py  test_external_tools.py  test_features.py  test_fusion.py  test_hpo.py  test_metrics.py  test_models.py  test_pretrain.py  test_training.py  test_uncertainty.py
webapp/: app.py
(+54 files in other folders)
